Styling changes for Python2_maint-3.7 branch

--- a/UI/chooser.ui
+++ b/UI/chooser.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Dialog_chooser</class>
+ <widget class="QDialog" name="Dialog_chooser">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Select Option</string>
   </property>
-  <widget class="QLabel" name="label_1">
+  <widget class="QLabel" name="label1_1">
    <property name="geometry">
     <rect>
      <x>5</x>
@@ -37,24 +37,11 @@
      <bold>true</bold>
     </font>
    </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel#label_1 {
-   qproperty-alignment: AlignCenter;
-	border: 1px solid #17365D;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-	padding: 0px 0px;
-	color: rgb(255, 255, 255);
-	max-height: 20px;
-	font: bold 10pt &quot;Ubuntu&quot;;
-}</string>
-   </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QFrame" name="frame_1">
+  <widget class="QFrame" name="frame1_1">
    <property name="geometry">
     <rect>
      <x>5</x>
@@ -62,14 +49,6 @@
      <width>195</width>
      <height>90</height>
     </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QFrame#frame_1 {
-	background-color: rgb(251, 251, 251);
-	border: 1px solid #17365D;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
-}</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
