--- a/UI/status.ui
+++ b/UI/status.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Frame</class>
- <widget class="QFrame" name="Frame">
+ <class>frame6_status_ui</class>
+ <widget class="QFrame" name="frame6_status_ui">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -39,124 +39,6 @@
      <height>180</height>
     </rect>
    </property>
-   <property name="palette">
-    <palette>
-     <active>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </active>
-     <inactive>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>42</red>
-         <green>42</green>
-         <blue>42</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </inactive>
-     <disabled>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </disabled>
-    </palette>
-   </property>
    <property name="font">
     <font>
      <pointsize>10</pointsize>
@@ -167,6 +49,12 @@
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
    <property name="autoScroll">
     <bool>false</bool>
@@ -216,15 +104,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -239,15 +118,6 @@
       <weight>50</weight>
       <bold>false</bold>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -264,15 +134,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -287,15 +148,6 @@
       <weight>50</weight>
       <bold>false</bold>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -312,15 +164,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -333,15 +176,6 @@
      <font>
       <pointsize>10</pointsize>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
    </item>
   </widget>
@@ -359,14 +193,17 @@
      <pointsize>10</pointsize>
     </font>
    </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
    <property name="frameShape">
     <enum>QFrame::NoFrame</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
    <property name="autoScroll">
     <bool>false</bool>
@@ -416,15 +253,6 @@
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -442,15 +270,6 @@
     </property>
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -470,15 +289,6 @@
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -496,15 +306,6 @@
     </property>
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -524,15 +325,6 @@
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -550,15 +342,6 @@
     </property>
     <property name="textAlignment">
      <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
    </item>
   </widget>
