--- a/UI/options.ui
+++ b/UI/options.ui
@@ -123,12 +123,6 @@
      <height>400</height>
     </rect>
    </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
    <widget class="QStackedWidget" name="stackedWidget_options">
     <property name="geometry">
      <rect>
@@ -1197,7 +1191,7 @@
     </widget>
    </widget>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label2_">
    <property name="geometry">
     <rect>
      <x>5</x>
