--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -3759,7 +3759,7 @@ p, li { white-space: pre-wrap; }
              </font>
             </property>
             <property name="currentIndex">
-             <number>6</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="tab_pd_status">
              <property name="styleSheet">
@@ -3847,11 +3847,13 @@ p, li { white-space: pre-wrap; }
                   <height>175</height>
                  </rect>
                 </property>
+                <property name="font">
+                 <font>
+                  <pointsize>10</pointsize>
+                 </font>
+                </property>
                 <property name="autoFillBackground">
                  <bool>false</bool>
-                </property>
-                <property name="styleSheet">
-                 <string notr="true">font: 10pt &quot;Ubuntu&quot;;</string>
                 </property>
                 <property name="readOnly">
                  <bool>true</bool>
@@ -5668,7 +5670,7 @@ p, li { white-space: pre-wrap; }
                <rect>
                 <x>0</x>
                 <y>365</y>
-                <width>1216</width>
+                <width>1220</width>
                 <height>2</height>
                </rect>
               </property>
@@ -6050,9 +6052,9 @@ p, li { white-space: pre-wrap; }
               <property name="geometry">
                <rect>
                 <x>415</x>
-                <y>10</y>
+                <y>7</y>
                 <width>776</width>
-                <height>255</height>
+                <height>258</height>
                </rect>
               </property>
               <property name="font">
@@ -6424,7 +6426,7 @@ QTabBar::tab:!selected {
                 <x>10</x>
                 <y>30</y>
                 <width>395</width>
-                <height>230</height>
+                <height>235</height>
                </rect>
               </property>
               <property name="frameShape">
@@ -6437,7 +6439,7 @@ QTabBar::tab:!selected {
                <property name="geometry">
                 <rect>
                  <x>255</x>
-                 <y>195</y>
+                 <y>200</y>
                  <width>126</width>
                  <height>17</height>
                 </rect>
@@ -6530,7 +6532,7 @@ QTabBar::tab:!selected {
                <property name="geometry">
                 <rect>
                  <x>130</x>
-                 <y>190</y>
+                 <y>195</y>
                  <width>126</width>
                  <height>27</height>
                 </rect>
@@ -12773,11 +12775,6 @@ p, li { white-space: pre-wrap; }
                      <pointsize>10</pointsize>
                     </font>
                    </property>
-                   <property name="styleSheet">
-                    <string notr="true">#tableWidget_attack_fuzzing_data_field &gt; QHeaderView {
-	font-size: 10pt;
-}</string>
-                   </property>
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
                    </property>
@@ -13354,7 +13351,7 @@ p, li { white-space: pre-wrap; }
                 <x>0</x>
                 <y>80</y>
                 <width>911</width>
-                <height>3</height>
+                <height>2</height>
                </rect>
               </property>
               <property name="orientation">
@@ -20659,7 +20656,7 @@ p, li { white-space: pre-wrap; }
              <string>Normalize</string>
             </property>
            </widget>
-           <widget class="Line" name="line_3">
+           <widget class="Line" name="line_iq">
             <property name="geometry">
              <rect>
               <x>0</x>
@@ -20668,14 +20665,11 @@ p, li { white-space: pre-wrap; }
               <height>1</height>
              </rect>
             </property>
-            <property name="styleSheet">
-             <string notr="true">Line#line_3{
-	border: 1px solid #17365D;
-
-}</string>
-            </property>
             <property name="frameShadow">
              <enum>QFrame::Plain</enum>
+            </property>
+            <property name="lineWidth">
+             <number>1</number>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -21048,7 +21042,7 @@ p, li { white-space: pre-wrap; }
            <zorder>pushButton1_iq_tab_resample</zorder>
            <zorder>pushButton1_iq_tab_ofdm</zorder>
            <zorder>pushButton1_iq_tab_normalize</zorder>
-           <zorder>line_3</zorder>
+           <zorder>line_iq</zorder>
            <zorder>frame1_5</zorder>
            <zorder>label1_119</zorder>
            <zorder>frame1_38</zorder>
@@ -23193,10 +23187,10 @@ p, li { white-space: pre-wrap; }
            <widget class="QTabWidget" name="tabWidget_library">
             <property name="geometry">
              <rect>
-              <x>0</x>
+              <x>-2</x>
               <y>0</y>
-              <width>1220</width>
-              <height>865</height>
+              <width>1225</width>
+              <height>870</height>
              </rect>
             </property>
             <property name="font">
@@ -24587,7 +24581,7 @@ p, li { white-space: pre-wrap; }
                <rect>
                 <x>-5</x>
                 <y>60</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>121</height>
                </rect>
               </property>
@@ -24715,7 +24709,7 @@ p, li { white-space: pre-wrap; }
                <rect>
                 <x>-5</x>
                 <y>180</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>121</height>
                </rect>
               </property>
@@ -24791,7 +24785,7 @@ Types</string>
                <rect>
                 <x>-5</x>
                 <y>300</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>121</height>
                </rect>
               </property>
@@ -24907,7 +24901,7 @@ Types</string>
                <rect>
                 <x>-5</x>
                 <y>540</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>160</height>
                </rect>
               </property>
@@ -25003,7 +24997,7 @@ Types</string>
                <rect>
                 <x>-5</x>
                 <y>420</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>121</height>
                </rect>
               </property>
@@ -25109,7 +25103,7 @@ Flow Graphs</string>
                <rect>
                 <x>-5</x>
                 <y>699</y>
-                <width>1222</width>
+                <width>1225</width>
                 <height>120</height>
                </rect>
               </property>
@@ -28052,9 +28046,10 @@ p, li { white-space: pre-wrap; }
      </widget>
      <addaction name="actionArduino"/>
      <addaction name="menuGeany"/>
-     <addaction name="actionhtop"/>
+     <addaction name="actionGpick"/>
      <addaction name="actiongrip"/>
      <addaction name="actionguidus"/>
+     <addaction name="actionhtop"/>
      <addaction name="menuQtDesigner"/>
      <addaction name="actionSystemback"/>
     </widget>
@@ -28121,6 +28116,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="actionGNU_Radio_Tutorials"/>
     <addaction name="actionProgramming_SDRs_with_GNU_Radio"/>
     <addaction name="actionLearn_SDR"/>
+    <addaction name="actioncomplextoreal_com"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -29667,6 +29663,16 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>Custom Mode</string>
+   </property>
+  </action>
+  <action name="actionGpick">
+   <property name="text">
+    <string>Gpick</string>
+   </property>
+  </action>
+  <action name="actioncomplextoreal_com">
+   <property name="text">
+    <string>complextoreal.com</string>
    </property>
   </action>
  </widget>
