--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -25599,6 +25599,8 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionMeld"/>
      <addaction name="actionWaveDrom"/>
      <addaction name="actionIQEngine"/>
+     <addaction name="actionSolve_Crypto_with_Force"/>
+     <addaction name="actionCrackStation"/>
     </widget>
     <widget class="QMenu" name="menuBluetooth">
      <property name="title">
@@ -27544,6 +27546,16 @@ p, li { white-space: pre-wrap; }
   <action name="actionComplextoreal_com">
    <property name="text">
     <string>complextoreal.com</string>
+   </property>
+  </action>
+  <action name="actionSolve_Crypto_with_Force">
+   <property name="text">
+    <string>Solve Crypto with Force</string>
+   </property>
+  </action>
+  <action name="actionCrackStation">
+   <property name="text">
+    <string>CrackStation</string>
    </property>
   </action>
  </widget>
